--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 /* Navgigation Bar */
+#navigation{
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    z-index: 1;
+}
 .container-fluid{
    padding: 1% 5%;
    margin: 0;
@@ -19,6 +25,7 @@ hr{
     color: #88b06a;
     margin: 0 20px;
     font-size: 18px;
+    display: block;
 }
 .nav-link:hover{
     color: grey;
@@ -30,6 +37,7 @@ hr{
 #middle-section{
     padding: 4% 10%;
     text-align: center;
+    background-color: white;
 }
 .big-heading{
     font-size: 3.2rem;
@@ -37,6 +45,7 @@ hr{
     padding: 0;
     color: #88b06a;
     line-height: 1.5;
+    margin-top: 100px;
 }
 p{
     line-height: 0.5;
@@ -48,7 +57,26 @@ p{
     font-size: 1.3rem;
     color: white;
     background-color: #88b06a;
-    padding: 20px;
-    width: 170px;
+    padding: 20px 40px;
     margin-top: 20px;
+}
+img{
+    height: 550px;
+    width: 1000px;
+}
+#img-carousel{
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+.hr-div{
+    background-color: black;
+    height: 4px;
+    width: 7%;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.c-heading{
+    font-family: 'Ultra', serif;
+    font-size: 1.5rem;
+    margin-bottom: 50px;
 }
